--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ script:
 - docker build -t ozonru/filebeat-throttle-plugin:${TAG} .
 after_success:
 - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-- docker push ozonru/filebeat-throttle-plugin:latest
+- docker push ozonru/filebeat-throttle-plugin:${TAG}
